# workers-rs

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  chompfile.toml  package-lock.json  package.json  publish.sh  readme.md  rust-analyzer.toml  rust-toolchain.toml  session-ses_317d.md  tsconfig.json
.cargo/: config.toml
edgeworker/: Cargo.toml
edgeworker-sys/: Cargo.toml
edgeworker-sys/src/: cf.rs  durable_object.rs  file.rs  form_data.rs  formdata.rs  global.rs  headers.rs  lib.rs  request.rs  response.rs
edgeworker/src/: cf.rs  lib.rs
examples/axum/: Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
examples/axum/src/: error.rs  lib.rs
examples/cron/: Cargo.toml  README.md  wrangler.toml
examples/cron/src/: lib.rs
examples/custom-req/: Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
examples/custom-req/src/: lib.rs
examples/custom-spans/: Cargo.toml  README.md  package.json  wrangler.toml
examples/custom-spans/src/: layer.rs  lib.rs
examples/do-rpc-server-client/: .gitignore  Cargo.toml  build.rs  wrangler.toml
examples/do-rpc-server-client/src/: client.rs  server.rs
examples/do-rpc-server-client/wit/: calculator.wit
examples/do-server-client/: Cargo.toml  wrangler.toml
examples/do-server-client/src/: client.rs  server.rs
examples/email/: Cargo.toml  wrangler.toml
examples/email/src/: lib.rs
examples/emscripten/: Cargo.toml  wrangler.toml
examples/emscripten/src/: lib.rs
examples/fetcher/: .gitignore  Cargo.toml  README.md  wrangler.toml
examples/fetcher/src/: lib.rs
examples/hyper/: Cargo.toml  README.md  package.json  wrangler.toml
examples/hyper/src/: connector.rs  lib.rs
examples/js_snippets/: Cargo.toml  README.md  package.json  wrangler.toml
examples/js_snippets/src/: lib.rs
examples/kv/: .gitignore  Cargo.toml  wrangler.example.toml
examples/kv/src/: lib.rs
examples/kv/worker/: worker.js
examples/queue/: Cargo.toml  README.md  package.json  wrangler.toml
examples/queue/src/: lib.rs
examples/router/: Cargo.toml  README.md  package.json  wrangler.toml
examples/router/src/: lib.rs
examples/rpc-client/: Cargo.toml  build.rs  package.json  wrangler.toml
examples/rpc-client/src/: calculator.rs  lib.rs
examples/rpc-client/wit/: calculator.wit
examples/rpc-server/: Cargo.toml  package.json  wrangler.toml
examples/rpc-server/src/: lib.rs
libworker/: Cargo.toml
libworker/src/: durable.rs  env.rs  error.rs  formdata.rs  global.rs  headers.rs  lib.rs  request.rs  request_init.rs  response.rs  router.rs
libworker/src/request/: cf.rs  headers.rs  method.rs  mod.rs
macros/: Cargo.toml
macros/cf/: Cargo.toml
macros/cf/src/: lib.rs
macros/durable_object/: Cargo.toml
macros/durable_object/src/: lib.rs
macros/src/: durable_object.rs  event.rs
rust-sandbox/: Cargo.toml  wrangler.toml
rust-sandbox/src/: counter.rs  lib.rs
rust-sandbox/src/test/: durable.rs  export_durable_object.rs  mod.rs
rust-sandbox/worker/: export_wasm.mjs  shim.mjs  worker.js
tokio-workers/: Cargo.toml
tokio-workers/src/: lib.rs  sync.rs  task.rs  time.rs
worker/: Cargo.toml
worker-build/: Cargo.toml  README.md
worker-build/benches/: worker_build.rs
worker-build/bindgen-test-subject/: Cargo.toml
worker-build/bindgen-test-subject/src/: lib.rs
worker-build/src/: binary.rs  build_lock.rs  bundler.rs  emoji.rs  install.rs  lockfile.rs  main.rs  main_legacy.rs  producers.rs  reference_types.rs  versions.rs
worker-build/src/c/: em_vfs.c
worker-build/src/durable_object/: get_durable_object_class_names.rs  get_durable_object_class_names_declaration.rs  get_durable_object_class_names_exports.rs  get_durable_objects_shim.rs  inject_durable_objects_shim.rs  mod.rs
worker-codegen/: Cargo.toml
worker-codegen/src/: lib.rs  wit.rs
worker-kv/: Cargo.toml  README.md
worker-kv/src/: builder.rs  lib.rs
worker-kv/tests/: integration.rs  package-lock.json  package.json
worker-macros/: Cargo.toml
worker-macros/src/: durable_object.rs  event.rs  lib.rs  rpc.rs  send.rs  test.rs  workflow.rs
worker-sandbox/: .dev.vars  Cargo.toml  test.sh  wrangler.toml
worker-sandbox/container-echo/: Cargo.toml  README.md
worker-sandbox/public/: text.txt
worker-sandbox/remote-service/: package.json  service.js  wrangler.toml
worker-sandbox/src/: alarm.rs  analytics_engine.rs  assets.rs  auto_response.rs  cache.rs  container.rs  counter.rs  d1.rs  durable.rs  fetch.rs  form.rs  js_snippets.rs  kv.rs  lib.rs  put_raw.rs  queue.rs  r2.rs  request.rs  router.rs  service.rs  shared_counter.rs  socket.rs  sql_counter.rs  sql_iterator.rs  user.rs  ws.rs
worker-sandbox/tests/: analytics_engine.spec.ts  assets.spec.ts  auto_response.spec.ts  cache.spec.ts  clone.spec.ts  container.spec.ts  d1.rs  d1.spec.ts  durable.spec.ts  kv.spec.ts  mf-socket.ts  mf.ts  queue.rs  queue.spec.ts  r2.spec.ts  request.spec.ts  requests.rs  service-bindings.spec.ts  simple.rs  sites.spec.ts  snippets.spec.ts  socket.spec.ts  sql_iterator.spec.ts  sqlite.spec.ts  subrequest.spec.ts  util.rs  websocket.rs  websocket.spec.ts
worker-sys/: Cargo.toml
worker-sys/src/: abort.rs  cache.rs  cf.rs  context.rs  d1.rs  decoding.rs  durable_object.rs  dynamic_dispatch.rs  encoding.rs  ext.rs  fetcher.rs  file.rs  formdata.rs  global.rs  lib.rs  queue.rs  r2.rs  remote_service.rs  request.rs  request_init.rs  response.rs  response_init.rs  schedule.rs  service.rs  streams.rs  try_future.rs  types.rs  websocket.rs
worker/js/: hacks.js
worker/src/: abort.rs  ai.rs  alloc.rs  analytics_engine.rs  body.rs  cache.rs  cf.rs  container.rs  context.rs  cors.rs  crypto.rs  d1.rs  date.rs  decoding.rs  delay.rs  digest_stream.rs  durable.rs  dynamic_dispatch.rs  email.rs  encoding.rs  env.rs  error.rs  fetch.rs  fetcher.rs  flagship.rs  flagship_gen.rs  formdata.rs  futures.rs  global.rs  headers.rs  http.rs  http_types.rs  hyperdrive.rs  init.rs  lib.rs  method.rs  observability.rs  panic_abort.rs  queue.rs  rate_limit.rs  (+22 more)
worker/tests/: event.rs  fetch.rs  headers.rs
(+397 files in other folders)
