[package]
name = "edgeworker-sys"
version = "0.1.0"
authors = ["Cloudflare Workers Team <workers@cloudflare.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
cfg-if = "0.1.2"
js-sys = "0.3.53"
wasm-bindgen = "=0.2.76"

[dependencies.web-sys]
version = "0.3.53"
features = ["ReadableStream", "RequestRedirect", "RequestInit", "ResponseInit", "FormData", "Blob"]