[package]
name = "macros"
version = "0.1.0"
authors = ["Cloudflare Workers Team <workers@cloudflare.com>"]
repository = "https://github.com/cloudflare/workers-rs"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
async-trait = "0.1.51"
edgeworker-sys = { path = "../edgeworker-sys" }
syn = "1.0.74"
proc-macro2 = "1.0.28"
quote = "1.0.9"
wasm-bindgen = "=0.2.74" 
wasm-bindgen-futures = "0.4.24"
wasm-bindgen-macro-support = "0.2.74"