[package]
authors = ["Cloudflare Workers Team <workers@cloudflare.com>"]
edition = "2018"
name = "rust-sandbox"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
cfg-if = "0.1.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
http = "0.2.4"
serde = { version = "1.0.126", features = ["derive"] }
url = "2.2.2"
wee_alloc = { version = "0.4.2", optional = true }
worker = { path = "../worker" }

[dev-dependencies]
wasm-bindgen-test = "0.2"
