[package]
authors = ["Cloudflare Workers Team <workers@cloudflare.com>"]
edition = "2018"
name = "worker-build"
version = "0.1.1"
license = "Apache-2.0"
repository = "https://github.com/cloudflare/workers-rs/tree/main/worker-build"
readme = "README.md"
description = "This is a tool to be used as a custom build command for a Cloudflare Workers `workers-rs` project."

[package.metadata.release]
release = false

[dependencies]
anyhow = "1.0.71"
dirs-next = "2.0.0"
flate2 = "1.0.26"
tar = "0.4.38"
ureq = { version = "2.6.2", features = ["tls", "gzip"] }
clap= { version="4.5", features=['derive'] }
worker-codegen = { path="../worker-codegen", version="0.1.0" }
wasm-pack = "0.13"

[dev-dependencies]
wasm-bindgen-cli-support.workspace = true


[[bin]]
name="worker-codegen"
