[package]
authors = ["Cloudflare Workers Team <workers@cloudflare.com>"]
edition = "2018"
name = "worker-build"
version = "0.1.4"
license = "Apache-2.0"
repository = "https://github.com/cloudflare/workers-rs/tree/main/worker-build"
readme = "README.md"
description = "This is a tool to be used as a custom build command for a Cloudflare Workers `workers-rs` project."

[package.metadata.release]
release = false

[dependencies]
anyhow = "1.0.98"
binary-install = "0.4.1"
cargo_metadata = "0.15.2"
chrono = "0.4.23"
clap = { version = "4.5", features = ['derive'] }
console = "0.15.5"
dialoguer = "0.10.3"
dirs-next = "2.0"
flate2 = "1.1"
glob = "0.3.1"
log = "0.4.17"
parking_lot = "0.12.1"
path-clean = "1.0.1"
semver = "1.0.16"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_ignored = "0.1.7"
serde_json = "1.0.91"
strsim = "0.10.0"
tar = "0.4"
toml = "0.7.3"
ureq = { version = "3.0", features = ["gzip", "json"] }
walkdir = "2.3.2"
which = "4.4.0"
worker-codegen.workspace = true

[dev-dependencies]
wasm-bindgen-cli-support.workspace = true

[[bin]]
name = "worker-codegen"
