[package]
name = "worker-codegen"
version = "0.1.0"
authors = ["Cloudflare Workers Team <workers@cloudflare.com>"]
repository = "https://github.com/cloudflare/workers-rs/tree/main/worker-codegen"
edition = "2018"
license = "Apache-2.0"
description = "Functions to generate Rust code from various formats such as WIT."

[package.metadata.release]
release = false

[lib]
path = "src/lib.rs"

[dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen-macro-support.workspace = true
syn = {version="2.0.17", features=['extra-traits']}
proc-macro2 = "1.0.60"
quote = "1.0.28"
prettyplease = { version="0.2" }
wit-parser= { version="0.205" }
convert_case={ version="0.6" }
anyhow={ version="1" }
