[package]
name = "worker-kv"
version = "0.7.0"
authors = ["Zeb Piasecki <zeb@zebulon.dev>"]
edition = "2018"
description = "Rust bindings to Cloudflare Worker KV Stores."
repository = "https://github.com/zebp/worker-kv"
license = "MIT OR Apache-2.0"

[package.metadata.release]
release = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.50"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.29"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.23"
serde-wasm-bindgen = "0.5.0"

[dev-dependencies]
fs_extra = "1.2.0"
psutil = { git = "https://github.com/mygnu/rust-psutil", branch = "update-dependencies" }
reqwest = { version = "0.11.8", features = ["json"] }
tokio = { version = "1.5.0", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "test-util",
    "time",
] }
