[package]
name = "worker-kv"
version = "0.9.0"
authors = ["Zeb Piasecki <zeb@zebulon.dev>"]
edition = "2018"
description = "Rust bindings to Cloudflare Worker KV Stores."
repository = "https://github.com/zebp/worker-kv"
license = "MIT OR Apache-2.0"

[package.metadata.release]
release = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.12"
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
serde-wasm-bindgen.workspace = true

[dev-dependencies]
fs_extra = "1.3.0"
psutil = { git = "https://github.com/mygnu/rust-psutil", branch = "update-dependencies" }
reqwest = { version = "0.12.20", features = ["json"] }
tokio = { version = "1.45.1", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "test-util",
    "time",
] }
