[package]
authors = ["Cloudflare Workers Team <workers@cloudflare.com>"]
description = "Macros to support the `worker` crate and remove FFI boilerplate / conversion from user code."
edition = "2018"
license = "Apache-2.0"
name = "worker-macros"
repository = "https://github.com/cloudflare/workers-rs/tree/main/worker-macros"
version = "0.0.10"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
async-trait = "0.1.68"
proc-macro2 = "1.0.60"
quote = "1.0.28"
syn = "2.0.17"
wasm-bindgen = "=0.2.87"
wasm-bindgen-futures = "0.4.36"
wasm-bindgen-macro-support = "0.2.87"
worker-sys = {path = "../worker-sys", version = "0.0.10"}

[features]
queue = []
