[package]
name = "worker-macros"
version.workspace = true
authors = ["Cloudflare Workers Team <workers@cloudflare.com>"]
repository = "https://github.com/cloudflare/workers-rs/tree/main/worker-macros"
edition = "2021"
license = "Apache-2.0"
description = "Macros to support the `worker` crate and remove FFI boilerplate / conversion from user code."

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen-macro-support.workspace = true
worker-sys.workspace = true
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true

[features]
queue = []
http = []
