[package]
authors = ["Cloudflare Workers Team <workers@cloudflare.com>"]
edition = "2018"
name = "worker-sandbox"
version = "0.1.0"
license = "Apache-2.0"

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
futures-channel.workspace = true
futures-util.workspace = true
blake2 = "0.10.6"
chrono = { version = "0.4.31", default-features = false, features = [
    "wasmbind",
    "clock",
] }
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2.10", features = ["js"] }
hex = "0.4.3"
http = "1"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
worker = { path = "../worker", version = "0.0.20", features = ["queue", "d1"] }
rand = "0.8.5"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
serde-wasm-bindgen = "0.6.1"
md5 = "0.7.0"

[dev-dependencies]
wasm-bindgen-test.workspace = true
futures-channel = { version = "0.3.29", features = ["sink"] }
futures-util = { version = "0.3.29", default-features = false, features = [
    "sink",
] }
reqwest = { version = "0.11.18", features = [
    "blocking",
    "json",
    "multipart",
    "stream",
] }
tokio = { version = "1.28.2", features = ["macros", "rt", "test-util"] }
tungstenite = "0.21"
retry = "2.0.0"
