[package]
authors = ["Cloudflare Workers Team <workers@cloudflare.com>"]
edition = "2018"
name = "worker-sandbox"
version = "0.1.0"
license = "Apache-2.0"

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["console_error_panic_hook"]
http = [
    "worker/http",
    "worker/axum",
    "dep:axum",
    "dep:tower-service",
    "dep:axum-macros",
]

[dependencies]
futures-channel.workspace = true
futures-util.workspace = true
blake2 = "0.10"
chrono = { version = "0.4", default-features = false, features = [
    "wasmbind",
    "clock",
] }
cfg-if = "1.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
hex = "0.4"
http.workspace = true
regex = "1.8.4"
serde.workspace = true
serde_json.workspace = true
worker.workspace = true
rand = "0.9.1"
uuid = { version = "1.17", features = ["v4", "serde", "js"] }
serde-wasm-bindgen.workspace = true
md5 = "0.7.0"
tokio-stream = "0.1"
tokio = { version = "1.45", default-features = false, features = ['io-util'] }
worker-kv.workspace = true
axum = { version = "0.8", optional = true, default-features = false }
axum-macros = { version = "0.5", optional = true, default-features = false }
tower-service = { version = "0.3", optional = true }

[dev-dependencies]
wasm-bindgen-test.workspace = true
futures-channel = { version = "0.3", features = ["sink"] }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
] }
tokio = { version = "1.45", features = ["macros", "rt", "test-util"] }
tungstenite = "0.27"
retry = "2.1"
