[package]
name = "worker-sys"
authors = ["Cloudflare Workers Team <workers@cloudflare.com>"]
edition = "2021"
version = "0.7.1"
license = "Apache-2.0"
repository = "https://github.com/cloudflare/workers-rs/tree/main/worker-sys"
description = "Low-level extern definitions / FFI bindings to the Cloudflare Workers JS Runtime."

[dependencies]
cfg-if.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true

[features]
d1 = []
queue = []
