[package]
name = "worker"
version = "0.6.5"
authors = ["Cloudflare Workers Team <workers@cloudflare.com>"]
repository = "https://github.com/cloudflare/workers-rs"
edition = "2018"
keywords = ["serverless", "ffi", "workers", "wasm", "cloudflare"]
license = "Apache-2.0"
description = "A Rust SDK for writing Cloudflare Workers."
readme = "../README.md"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]
async-trait.workspace = true
bytes = "1.5"
chrono.workspace = true
futures-channel.workspace = true
futures-util.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
http.workspace = true
http-body = "1"
matchit = "0.7"
pin-project = "1.1.0"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.28", default-features = false }
url = "2.4.0"
serde-wasm-bindgen.workspace = true
serde_urlencoded = "0.7"
wasm-streams = "0.4"
worker-kv.workspace = true
worker-macros.workspace = true
worker-sys.workspace = true
chrono-tz = { version = "0.10.3", optional = true, default-features = false }
web-sys.workspace = true
tokio-postgres = { version = "0.7", optional = true, default-features = false, features = [
    "js",
] }
axum = { version = "0.8", optional = true, default-features = false }

[features]
queue = ["worker-macros/queue", "worker-sys/queue"]
d1 = ["worker-sys/d1"]
http = ["worker-macros/http"]
axum = ["dep:axum"]
timezone = ["dep:chrono-tz"]
