[package]
name = "worker"
version = "0.8.3"
authors = ["Cloudflare Workers Team <workers@cloudflare.com>"]
repository = "https://github.com/cloudflare/workers-rs"
edition = "2021"
keywords = ["serverless", "ffi", "workers", "wasm", "cloudflare"]
license = "Apache-2.0"
description = "A Rust SDK for writing Cloudflare Workers."
readme = "../README.md"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]
async-trait.workspace = true
axum = { version = "0.8", optional = true, default-features = false }
bytes = "1.5"
chrono-tz = { version = "0.10.3", optional = true, default-features = false }
chrono.workspace = true
futures-channel.workspace = true
futures-util.workspace = true
http-body = "1"
http.workspace = true
js-sys.workspace = true
matchit = "0.7"
pin-project = "1.1.0"
serde_json.workspace = true
serde_urlencoded = "0.7"
serde-wasm-bindgen.workspace = true
serde.workspace = true
strum.workspace = true
tokio = { version = "1.28", default-features = false }
tokio-postgres = { version = "0.7", optional = true, default-features = false, features = [
    "js",
] }
url = "2.4.0"
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
wasm-streams.workspace = true
web-sys.workspace = true
worker-macros.workspace = true
worker-sys.workspace = true

[features]
queue = ["worker-macros/queue", "worker-sys/queue"]
d1 = ["worker-sys/d1"]
http = ["worker-macros/http"]
axum = ["dep:axum"]
timezone = ["dep:chrono-tz"]

[dev-dependencies]
trybuild.workspace = true
wasm-bindgen-test.workspace = true
