[package]
name = "axum-on-workers"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ['http', 'axum'] }
worker-macros = { version = "0.7", features = ['http'] }
axum = { version = "0.8", default-features = false, features = ['json'] }
axum-macros = "0.5.0"
tower-service = "0.3.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.106"
serde = { version = "1.0", features = ["derive"] }
