[package]
name = "do-rpc-server-client"
version = "0.1.0"
edition = "2021"
authors = ["Alexandre Faria <alexandre.faria@auroka.pt>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { path = "../../worker" }
worker-macros = { path = "../../worker-macros" }
console_error_panic_hook = { version = "0.1.1" }

# TODO: Remove the need for these
async-trait = "0.1"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[build-dependencies]
worker-codegen = { path = "../../worker-codegen" }
